# comptine

./: .gersemirc  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  AboutDialog.qml  Account.cpp  Account.h  AccountComboBox.qml  AccountListModel.cpp  AccountListModel.h  AmountField.qml  AppSettings.cpp  AppSettings.h  AppState.cpp  AppState.h  ApplicationMenuBar.qml  BalanceHeader.qml  BaseDialog.qml  BudgetData.cpp  BudgetData.h  BudgetView.qml  CMakeLists.txt  CategorizationRule.cpp  CategorizationRule.h  CategorizeDialog.qml  Category.cpp  Category.h  CategoryController.cpp  CategoryController.h  CategoryDetailView.qml  CategoryEditDialog.qml  ClipboardController.cpp  ClipboardController.h  CreateCounterPartDialog.qml  CsvParser.h  DateInput.qml  DateLabel.qml  DateSpinBox.qml  EditBudgetDateDialog.qml  (+60 more)
.github/workflows/: build.yml  jekyll-gh-pages.yml  lint.yml
.opencode/: opencode.jsonc
budget/: BudgetProgress.qml  BudgetView.qml  CMakeLists.txt  CategoryDetailView.qml  CategoryEditDialog.qml  MonthCategoryItem.qml
commonui/: AmountField.qml  AmountLabel.qml  CMakeLists.txt  DateLabel.qml  Theme.qml
conan/profiles/: macos  windows
docs/: _config.yml  download.md  features.md  index.md
docs/_data/: navigation.yml  strings.yml
docs/_includes/: download-card.html  feature-card.html  footer.html  nav.html  screenshot.html
docs/_layouts/: default.html  download.html  home.html  page.html
docs/assets/css/: style.css
docs/en/: download.md  features.md  index.md
docs/fr/: download.md  features.md  index.md
operations/: AccountComboBox.qml  BalanceHeader.qml  CMakeLists.txt  CreateCounterPartDialog.qml  DateInput.qml  OperationDelegate.qml  OperationDetails.qml  OperationEditDialog.qml  OperationList.qml  OperationView.qml  RenameAccountDialog.qml
rules/: CMakeLists.txt  RuleEditDialog.qml  RulesView.qml
scripts/: capture-screenshots.sh  check-translations.sh  generate_icon.py
tests/: CategoryTest.cpp  CsvParserTest.cpp  FileControllerTest.cpp  example.comptine  import1.csv  import2.csv  money.csv  money2.csv
translations/: comptine_fr.ts
