[project]
name = "comptine-dev"
version = "0.1.0"
description = "Development dependencies for Comptine"
requires-python = ">=3.10"
dependencies = [
    "aqtinstall>=3.3.0",
    "clang-format==21.1.7",
    "conan>=2.0.0",
    "gersemi~=0.27.7",
    "pillow>=11.0.0",
    "pre-commit>=4.0.0",
    "resvg-py>=0.2.0",
    "yamllint>=1.35.0",
]
